Update English translations in en.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,93 +1,93 @@
 {
-  "ui_use": "Brug",
-  "ui_give": "Giv",
-  "ui_close": "Luk",
-  "ui_drop": "Smid",
-  "ui_removeattachments": "Fjern tilbehør",
-  "ui_copy": "Kopier serie nummer",
-  "ui_durability": "Holdbarhed",
-  "ui_ammo": "Ammunition",
-  "ui_serial": "Serienummer",
-  "ui_components": "Tilbehør",
-  "ui_tint": "Farve",
-  "ui_usefulcontrols": "Nyttige taster",
-  "ui_rmb": "Åben tingens undermenu",
-  "ui_ctrl_lmb": "Flyt hurtigt en stak ting til et andet inventar",
-  "ui_shift_drag": "Del tingene op i halvdele",
-  "ui_ctrl_shift_lmb": "Flyt hurtigt en halv stak ting til et andet inventar",
-  "ui_alt_lmb": "Brug en ting hurtigt",
-  "ui_ctrl_c": "Når du holder musen over våben, kan du se serie nummer",
-  "ui_remove_ammo": "Fjern ammu",
-  "ammo_type": "Ammu type",
-  "$": "DKK",
-  "male": "Mand",
-  "female": "Kvinde",
-  "used": "Brugt",
-  "ui_removed": "Fjernede",
-  "ui_added": "Tilføjede",
-  "ui_holstered": "Hylstret",
-  "ui_equipped": "Udstyret",
-  "using": "Bruger %s",
-  "inventory_setup": "Inventaret er klar til brug",
-  "inventory_player_access": "Du kan ikke åbne dit inventar lige nu",
-  "inventory_right_access": "Du kan ikke åbne dette inventar",
-  "inventory_lost_access": "Du kan ikke længere tilgå dette inventar",
-  "wrong_ammo": "Du kan ikke lade %s med %s ammunition",
-  "weapon_license": "Våben Licens",
-  "already_have": "Du har en våben licens",
-  "have_purchased": "Du har købt en våben licens",
-  "can_not_afford": "Du har ikke råd til en våben licens",
-  "purchase_license": "Køb licens",
-  "interact_prompt": "[%s] Tilgå shop",
-  "weapon_unregistered": "%s er ikke registreret til nogen",
-  "weapon_registered": "%s (%s) er registreret til %s",
-  "weapon_broken": "Dette våben er i stykker",
-  "vehicle_locked": "Køretøjet er låst",
-  "nobody_nearby": "Der er ingen i nærheden",
-  "give_amount": "Du skal indtaste et antal du ønsker at give",
-  "buy_amount": "Du skal enter et antal du ønsker at købe",
-  "component_has": "Dette våben har allerede %s",
-  "component_invalid": "Dette våben kan ikke benytte %s",
-  "component_slot_occupied": "Dette våben %s slot er optaget",  
-  "cannot_perform": "Du kan ikke udføre denne handling",
-  "cannot_carry": "Du kan ikke bære så meget",
-  "cannot_carry_other": "Inventaret du prøver at lægge i kan ikke indeholde så meget",
-  "cannot_carry_limit": "Kan ikke bære mere end %s %s",
-  "cannot_carry_limit_other": "enhed har ikke plads til mere %s %s",
-  "items_confiscated": "Dine ting er blevet konfiskeret",
-  "items_returned": "Dine ting er blevet returneret",
-  "item_unauthorised": "Du har ikke tilladelse til at købe denne ting",
-  "item_unlicensed": "Du har ikke licens til at købe denne ting",
-  "item_not_enough": "Du har ikke nok %s",
-  "cannot_afford": "Du har ike råd til dette (mangler %s)",
-  "stash_lowgrade": "Du er ikke autoriseret til at tage denne ting",
-  "cannot_use": "Kan ikke bruge %s",
-  "shop_nostock": "Varen er ikke på lager",
-  "identification": "Køn: %s  \nFødselsdato: %s",
-  "search_dumpster": "Undersøg Skraldespand",
-  "open_label": "Åben %s",
-  "purchased_for": "Købte %s %s for %s%s",
-  "unable_stack_items": "Du kan ikke lægge disse ting i stakken",
-  "police_evidence": "Politi bevismateriale",
-  "open_police_evidence": "Åben politi beviseopbevaring",
-  "open_stash": "Åben opbevaring",
-  "locker_number": "Skabs nummer",
-  "locker_no_value": "Skal indeholde værdi for at åbne skabet",
-  "locker_must_number": "Skabet skal benytte et nummer",
-  "weapon_hand_required": "Du skal have et våben i hånden",
-  "weapon_hand_wrong": "Forkert våben i hånden",
-  "open_player_inventory": "Åben inventar~",
-  "open_secondary_inventory": "Åben sekundært inventar~",
-  "disable_hotbar": "Vis inventar hotbar~",
-  "reload_weapon": "Genlad våben~",
-  "use_hotbar": "Brug hotbar ting %s~",
-  "no_durability": "Holdbarhed udløbet",
-  "cannot_give": "Kan ikke give %s %s til person",
-  "evidence_cannot_take": "Ikke høj nok rangering til at tage bevismateriale",
-  "dumpster": "Skraldespand",
-  "crafting_item": "Produktion %s",
-  "crafting_bench": "Arbejds bænk",
-  "open_crafting_bench": "Brug arbejdsbænk",
-  "not_enough_durability": "%s mangler holdbarhed",
-  "storage": "Opbevaring"
+  "ui_use": "Use",
+  "ui_give": "Give",
+  "ui_close": "Close",
+  "ui_drop": "Drop",
+  "ui_removeattachments": "Remove attachments",
+  "ui_copy": "Copy serial number",
+  "ui_durability": "Durability",
+  "ui_ammo": "Ammo",
+  "ui_serial": "Serial number",
+  "ui_components": "Components",
+  "ui_tint": "Tint",
+  "ui_usefulcontrols": "Useful Controls",
+  "ui_rmb": "Open item context menu",
+  "ui_ctrl_lmb": "Fast move a stack of items into another inventory",
+  "ui_shift_drag": "Split item quantity into half",
+  "ui_ctrl_shift_lmb": "Fast move half a stack of items into another inventory",
+  "ui_alt_lmb": "Fast use an item",
+  "ui_ctrl_c": "When hovering over a weapon, copies it's serial number",
+  "ui_remove_ammo": "Remove ammo",
+  "ammo_type": "Ammo type",
+  "$": "$",
+  "male": "Male",
+  "female": "Female",
+  "used": "Used",
+  "ui_removed": "Removed",
+  "ui_added": "Added",
+  "ui_holstered": "Holstered",
+  "ui_equipped": "Equipped",
+  "using": "Using %s",
+  "inventory_setup": "Inventory is ready to use",
+  "inventory_player_access": "You can't open your inventory right now",
+  "inventory_right_access": "You can not open this inventory",
+  "inventory_lost_access": "No longer able to access this inventory",
+  "wrong_ammo": "You can't load the %s with %s ammo",
+  "license": "%s License",
+  "already_have": "You already have a %s",
+  "have_purchased": "You have purchased a %s",
+  "can_not_afford": "You can not afford a %s",
+  "purchase_license": "Purchase a %s license",
+  "interact_prompt": "Interact with [%s]",
+  "weapon_unregistered": "%s is not registered to anyone",
+  "weapon_registered": "%s (%s) is registered to %s",
+  "weapon_broken": "This weapon is broken",
+  "vehicle_locked": "Vehicle is locked",
+  "nobody_nearby": "There is nobody nearby",
+  "give_amount": "You must enter an amount to give",
+  "buy_amount": "You must enter an amount to buy",
+  "component_has": "This weapon already has a %s",
+  "component_invalid": "This weapon is incompatible with %s",
+  "component_slot_occupied": "This weapon's %s slot is already occupied",
+  "cannot_perform": "You can not perform this action",
+  "cannot_carry": "You can not carry that much",
+  "cannot_carry_other": "Target inventory can not hold that much",
+  "cannot_carry_limit": "You cannot carry more than %s %s",
+  "cannot_carry_limit_other": "Target cannot carry more than %s %s",
+  "items_confiscated": "Your items have been confiscated",
+  "items_returned": "Your items have been returned",
+  "item_unauthorised": "You are not authorised to purchase this item",
+  "item_unlicensed": "You are not licensed to purchase this item",
+  "item_not_enough": "You do not have enough %s",
+  "cannot_afford": "You can not afford that (missing %s)",
+  "stash_lowgrade": "You are not authorised to take this item",
+  "cannot_use": "Unable to use %s",
+  "shop_nostock": "Item is out of stock",
+  "identification": "Sex: %s  \nDate of birth: %s",
+  "search_dumpster": "Search Dumpster",
+  "open_label": "Open %s",
+  "purchased_for": "Purchased %s %s for %s%s",
+  "unable_stack_items": "You're unable to stack these items",
+  "police_evidence": "Police Evidence",
+  "open_police_evidence": "Open Police Evidence",
+  "open_stash": "Open Stash",
+  "locker_number": "Locker number",
+  "locker_no_value": "Must contain value to open locker",
+  "locker_must_number": "Locker must be a number",
+  "weapon_hand_required": "You must have a weapon in hand",
+  "weapon_hand_wrong": "Wrong weapon in hand",
+  "open_player_inventory": "Open player inventory~",
+  "open_secondary_inventory": "Open secondary inventory~",
+  "disable_hotbar": "Display inventory hotbar~",
+  "reload_weapon": "Reload weapon~",
+  "use_hotbar": "Use hotbar item %s~",
+  "no_durability": "%s durability is depleted",
+  "cannot_give": "Unable to give %s %s to the target",
+  "evidence_cannot_take": "You are not authorised to withdraw evidence",
+  "dumpster": "Dumpster",
+  "crafting_item": "Crafting %s",
+  "crafting_bench": "Crafting Bench",
+  "open_crafting_bench": "Open Crafting Bench",
+  "not_enough_durability": "%s does not have enough durability",
+  "storage": "Storage"
 }
